--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
         "mongoose": "^5.3.13",
         "pusher": "^2.1.4"
     },
+    "engines": {
+        "node": "1.18.6""
+    },
     "devDependencies": {
         "nodemon": "^1.18.6"
     }
