--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
         "mongoose": "^5.3.13",
         "pusher": "^2.1.4"
     },
-    "engines": {
-        "node": "1.18.6""
-    },
     "devDependencies": {
         "nodemon": "^1.18.6"
-    }
+    },
+     "engines": {
+        "node": "^1.18.6""
+    },
 }
