--- a/package.json
+++ b/package.json
@@ -20,6 +20,15 @@
         "nodemon": "^1.18.6"
     },
      "engines": {
-        "node": "^1.18.6""
+        "node": "^1.18.6"
     },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/themon786/pollApp"
+    },
+    "keywords": {
+        "node",
+        "heroku",
+        "express"
+    }
 }
