--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
         "type": "git",
         "url": "https://github.com/themon786/pollApp"
     },
-    "keywords": {
+    "keywords": [
         "node",
         "heroku",
         "express"
-    }
+    ]
 }
