--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "nodemon": "^1.18.6"
     },
      "engines": {
-        "node": "^1.18.6"
+        "node": "8.11.1"
     },
     "repository": {
         "type": "git",
